[package]
name = "playback-compiler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
bytes = "1"

deadpool-redis = "0.14"
redis = { version = "0.25", features = ["tokio-comp"] }
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = {version = "1.47.1", features = ["full"]}
once_cell = "1.21.3"
dotenvy = "0.15.7"

[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.14.0"
