[package]
name = "playback-compiler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "playback_compiler"
path = "src/lib.rs"

[dependencies]
zstd = "0.13"
fastrand = "2"
rustc-hash = "1.1"
tokio-stream = "0.1"
futures = "0.3"
mimalloc = { version = "0.1", default-features = false }
prost = "0.14.1"
prost-types = "0.14.1"
bytes = "1"
arrow = "56.0.0"
arrow-ipc = "56.0.0"
arrow-array = "56.0.0"
arrow-schema = "56.0.0"
anyhow="1"
deadpool-redis = "0.14"
redis = { version = "0.25", features = ["tokio-comp", "streams"] }
aws-config = "1.8.3"
aws-sdk-s3 = {version = "1.100.0", features = ["rustls"]}
aws-types = "1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = {version = "1.47.1", features = ["full"]}
once_cell = "1.21.3"
dotenvy = "0.15.7"
url = "2.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-error = "0.2"
async-trait = "0.1"
tracing-appender = "0.2"
aws-credential-types = "1.2.5"
hostname = "0.4.1"

[dev-dependencies]
testcontainers = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports", "async"] }
rand = "0.8"

[[bench]]
name = "transform_bench"
harness = false

[[bench]]
name = "orchestration_bench"
harness = false

[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.14.0"
